# backend/app/controllers/v1/penggalangan/penggalangan_dana_controller.rb
@@ -505,6 +505,57 @@ class V1::Penggalangan::PenggalanganDanaController < ApplicationController
     end
   end
 
+  def getApprovedDonasiByPenggalanganDana
+    penggalangan_dana = Penggalangan::PenggalanganDana.where(id: params[:id]).first
+    if not penggalangan_dana.present?
+      render json: {
+        response_code: Constants::ERROR_CODE_VALIDATION,
+        response_message: "Data Penggalangan Dana tidak ditemukan!"
+        }, status: :unprocessable_entity
+    elsif not penggalangan_dana.donasi_id.present?
+      render json: {
+        response_code: Constants::ERROR_CODE_VALIDATION,
+        response_message: "Belum ada donasi pada penggalangan dana ini!"
+        }, status: :unprocessable_entity
+    else
+      if penggalangan_dana.pengajuan_bantuan.kind_of?(Array)
+        pengajuan_bantuan = Pengajuan::PengajuanBantuan.where(:id => penggalangan_dana.pengajuan_bantuan_id[0])
+      else
+        pengajuan_bantuan = Pengajuan::PengajuanBantuan.where(:id => penggalangan_dana.pengajuan_bantuan_id)
+      end
+      donasi = Penggalangan::Donasi.approved.where(:id.in => penggalangan_dana.donasi_id)
+      if not donasi.present?
+        render json: {
+          response_code: Constants::ERROR_CODE_VALIDATION,
+          response_message: "Tidak ada data donasi pada penggalangan dana ini!"
+          }, status: :unprocessable_entity
+      else
+        if donasi.length > 1
+          data_donasi = []
+          donasi.each_with_index do |data_donation, index_donasi|
+            donatur = User::Donatur.donatur_registered.where(:donasi_id => data_donation.id)
+            data_donasi << penggalangan_dana.attributes.merge({
+              :pengajuan_bantuan_id => pengajuan_bantuan,
+              :donasi_id => donatur.first.attributes.merge(:donasi_id => data_donation)
+            })
+          end
+          donasi_penggalangan_dana = data_donasi.reverse
+        else
+          donatur = User::Donatur.donatur_registered.where(:donasi_id => donasi.first.id)
+          donasi_penggalangan_dana = penggalangan_dana.attributes.merge({
+            :pengajuan_bantuan_id => pengajuan_bantuan,
+            :donasi_id => donatur.first.attributes.merge(:donasi_id => donasi)
+          })
+        end
+        render json: {
+          response_code: Constants::RESPONSE_SUCCESS, 
+          response_message: "Success", 
+          data: donasi_penggalangan_dana
+          }, status: :ok
+      end
+    end
+  end
+
   private
   #form pengaju
   def pengajuan_bantuan_params
